--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.5",
     "@mui/material": "^5.14.2",
+    "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
     "@types/three": "^0.154.0",
     "@vercel/analytics": "^1.0.1",
     "i18next": "^23.3.0",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
