--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/abril-fatface": "^5.0.5",
+    "@fontsource/handjet": "^5.0.1",
     "@fontsource/oswald": "^5.0.8",
+    "@fontsource/permanent-marker": "^5.0.8",
     "@fontsource/roboto": "^5.0.5",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.2",
